<resources>
    <string name="app_name">kursach</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="name_1_text">Restaurant</string>
    <string name="name_2_text">App</string>
    <string name="image_description_1">Hot clients</string>
    <string name="image_description_2">Log in filters</string>
    <string name="image_description_3">Categories</string>
    <string name="burgers_menu">Бургеры</string>
    <string name="burger_price">Цена:</string>
    <string name="burger_kkal">Калории:</string>
    <string name="potato_menu">Картофель фри</string>
    <string name="soda_menu">Напитки</string>
    <string name="sauce_menu">Соусы</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="welcome">Добро пожаловать</string>
</resources>